# claude-research-cascade

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HARNESS.md  MANIFEST.in  README.md  README.zh-TW.md  SCENARIOS.md  SECURITY.md  SKILL.md  WORKERS.md  pyproject.toml
.agents/skills/deep/: SKILL.md
.claude/skills/deep/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/benchmarks/: 2026-07-11-exa-vs-brave.md
docs/superpowers/plans/: 2026-07-12-zh-tw-human-report.md
examples/field/: README.md
examples/transcripts/: quick-fact.md
examples/v2/: README.md  light-contract.json  medium-contract.json
research_harness/: __init__.py  _canon.py  artifacts.py  boundary.py  budget_profiles.json  budgets.py  contracts.py  operations.py  provider_registry.json  providers.py  quota.py  rendering.py  state.py  storage.py  validation.py
research_harness/adapters/: README.md  __init__.py  crossref.py  openalex.py  osv.py  perplexity_deep.py  pypi.py  scholar.py
scripts/: deep_research.py  doctor.py  release_gate.py  render_report.py  research_state.py  validate_state.py
tests/: helpers.py  test_artifacts.py  test_async_boundary.py  test_boundary.py  test_brave.py  test_budgets.py  test_canon.py  test_cli.py  test_contracts.py  test_crossref.py  test_demo_flow.py  test_docs.py  test_europe_pmc.py  test_exa.py  test_github.py  test_host_tier_contract.py  test_ietf.py  test_legacy_worker.py  test_nvd.py  test_openai_deep.py  test_openalex.py  test_osv.py  test_pypi.py  test_quota.py  test_release_gate.py  test_rendering.py  test_scholar.py  test_sources.py  test_state.py  test_storage.py  test_validation.py
tests/fixtures/: crossref_bad_request.json  crossref_missing_items.json  crossref_success.json  openalex_success.json  perplexity_deep_poll_malformed_terminal.json  perplexity_deep_poll_running.json  perplexity_deep_poll_terminal_failure.json  perplexity_deep_poll_terminal_success.json  perplexity_deep_submit_accept.json  perplexity_deep_submit_malformed.json  pypi_malformed_missing_name.json  pypi_success.json  scholar_success.json
(+30 files in other folders)
