[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-deep-research-trigger"
version = "2.0.0b6"
description = "Portable, evidence-gated deep research agent skill for Claude Code and OpenAI Codex"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jechiu16" }]
keywords = [
  "agent-skills",
  "claude-code",
  "codex",
  "deep-research",
  "research-agent",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "coverage[toml]>=7.6,<8",
  "packaging>=24,<27",
  "pip-audit>=2.9,<3",
  "ruff>=0.12,<1",
  "twine>=6,<7",
]

[project.scripts]
deep-research-state = "scripts.research_state:main"
deep-research-release-gate = "scripts.release_gate:main"

[project.urls]
Documentation = "https://github.com/jechiu16/agent-deep-research-trigger#readme"
Issues = "https://github.com/jechiu16/agent-deep-research-trigger/issues"
Repository = "https://github.com/jechiu16/agent-deep-research-trigger"

[tool.setuptools.packages.find]
include = ["research_harness*", "scripts*"]

[tool.setuptools.package-data]
research_harness = ["provider_registry.json"]

[tool.coverage.run]
branch = true
source = ["research_harness"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/render_report.py" = ["E402"]
"scripts/research_state.py" = ["E402"]
